--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -220,6 +220,38 @@
     <Content Include="ViewV5\JS\WFJS.min.js">
       <DependentUpon>WFJS.js</DependentUpon>
     </Content>
+    <Content Include="ViewV5\web\css\css.css" />
+    <Content Include="ViewV5\web\css\default.css" />
+    <Content Include="ViewV5\web\images\erweima.png" />
+    <Content Include="ViewV5\web\images\input.png" />
+    <Content Include="ViewV5\web\images\logo.png" />
+    <Content Include="ViewV5\web\images\szkj.png" />
+    <Content Include="ViewV5\web\images\weixin1.png" />
+    <Content Include="ViewV5\web\images\yes.png" />
+    <Content Include="ViewV5\web\js\jquery-1.9.1.min.js" />
+    <Content Include="ViewV5\web\js\layer\extend\layer.ext.js" />
+    <Content Include="ViewV5\web\js\layer\layer.js" />
+    <Content Include="ViewV5\web\js\layer\skin\default\icon-ext.png" />
+    <Content Include="ViewV5\web\js\layer\skin\default\icon.png" />
+    <Content Include="ViewV5\web\js\layer\skin\default\loading-0.gif" />
+    <Content Include="ViewV5\web\js\layer\skin\default\loading-1.gif" />
+    <Content Include="ViewV5\web\js\layer\skin\default\loading-2.gif" />
+    <Content Include="ViewV5\web\js\layer\skin\layer.css" />
+    <Content Include="ViewV5\web\js\layer\skin\layer.ext.css" />
+    <Content Include="ViewV5\web\js\SZHLCommon.js" />
+    <Content Include="ViewV5\web\login\bootstrap.css" />
+    <Content Include="ViewV5\web\login\bootstrap.min.js" />
+    <Content Include="ViewV5\web\login\components.css" />
+    <Content Include="ViewV5\web\login\css.css" />
+    <Content Include="ViewV5\web\login\index.css" />
+    <Content Include="ViewV5\web\login\lg2.png" />
+    <Content Include="ViewV5\web\login\lg3.png" />
+    <Content Include="ViewV5\web\login\lock.png" />
+    <Content Include="ViewV5\web\login\logo.png" />
+    <Content Include="ViewV5\web\login\logo_r.png" />
+    <Content Include="ViewV5\web\login\lonnew.png" />
+    <Content Include="ViewV5\web\login\ueser.png" />
+    <Content Include="ViewV5\web\login\uniform.default.css" />
     <Content Include="View_Mobile\CSS\login.css" />
     <Content Include="View_Mobile\JS\avalon1.47.js" />
     <Content Include="View_Mobile\UI\UI_CAR_INFO.html" />
