--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -212,6 +212,9 @@
     <Content Include="ViewV5\AppPage\YCGL\YCGLVIEW.html" />
     <Content Include="ViewV5\APP_WARN.html" />
     <Content Include="ViewV5\Base\showvideo_bak.html" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.css" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.js" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.svg" />
     <Content Include="ViewV5\images\qrcode.png" />
     <Content Include="ViewV5\JS\ADDJS.js" />
     <Content Include="ViewV5\JS\index.min.js">
@@ -253,6 +256,7 @@
     <Content Include="ViewV5\web\login\ueser.png" />
     <Content Include="ViewV5\web\login\uniform.default.css" />
     <Content Include="View_Mobile\CSS\login.css" />
+    <Content Include="View_Mobile\CSS\msui.css" />
     <Content Include="View_Mobile\JS\avalon1.47.js" />
     <Content Include="View_Mobile\UI\UI_CAR_INFO.html" />
     <Content Include="View_Mobile\UI\UI_CAR_LIST.html" />
@@ -1592,6 +1596,9 @@
     <Content Include="ToolS\umeditor122\net\getContent.ashx" />
     <Content Include="ToolS\umeditor122\net\imageUp.ashx" />
     <Content Include="ToolS\UploadTX.ashx" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.eot" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.ttf" />
+    <Content Include="ViewV5\CSS\icfont_qj\iconfont.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
