--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -203,12 +203,13 @@
     <Content Include="ViewV5\AppPage\HYGL\HYS.html" />
     <Content Include="ViewV5\AppPage\HYGL\HYSLIST.html" />
     <Content Include="ViewV5\AppPage\HYGL\HYSVIEW.html" />
-    <Content Include="ViewV5\AppPage\TSGL\TSGL.html" />
-    <Content Include="ViewV5\AppPage\TSGL\TSGLLIST.html" />
-    <Content Include="ViewV5\AppPage\TSGL\TSGLVIEW.html" />
-    <Content Include="ViewV5\AppPage\TSGL\JYGL.html" />
-    <Content Include="ViewV5\AppPage\TSGL\JYGLLIST.html" />
-    <Content Include="ViewV5\AppPage\TSGL\JYGLVIEW.html" />
+    <Content Include="ViewV5\AppPage\JYGL\TSGL.html" />
+    <Content Include="ViewV5\AppPage\JYGL\TSKLIST.html" />
+    <Content Include="ViewV5\AppPage\JYGL\TSGLLIST.html" />
+    <Content Include="ViewV5\AppPage\JYGL\TSGLVIEW.html" />
+    <Content Include="ViewV5\AppPage\JYGL\JYGL.html" />
+    <Content Include="ViewV5\AppPage\JYGL\JYGLLIST.html" />
+    <Content Include="ViewV5\AppPage\JYGL\JYGLVIEW.html" />
     <Content Include="ViewV5\AppPage\YCGL\CLGL.html" />
     <Content Include="ViewV5\AppPage\YCGL\CLGLLIST.html" />
     <Content Include="ViewV5\AppPage\YCGL\CLGLVIEW.html" />
