继续完善细节.添加了个新模块

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -222,6 +222,39 @@
     <Content Include="ViewV5\CSS\icfont_qj\iconfont.css" />
     <Content Include="ViewV5\CSS\icfont_qj\iconfont.js" />
     <Content Include="ViewV5\CSS\icfont_qj\iconfont.svg" />
+    <Content Include="ViewV5\images\icon\bigicon\CCXJ.png" />
+    <Content Include="ViewV5\images\icon\bigicon\Common.png" />
+    <Content Include="ViewV5\images\icon\bigicon\CRM.png" />
+    <Content Include="ViewV5\images\icon\bigicon\DBRW.png" />
+    <Content Include="ViewV5\images\icon\bigicon\DCGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\DXGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\GZBG.png" />
+    <Content Include="ViewV5\images\icon\bigicon\HYGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\Info.jpg" />
+    <Content Include="ViewV5\images\icon\bigicon\JFBX.png" />
+    <Content Include="ViewV5\images\icon\bigicon\KDDY.png" />
+    <Content Include="ViewV5\images\icon\bigicon\KDGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\KQGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\KSGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\LCSP.png" />
+    <Content Include="ViewV5\images\icon\bigicon\NOTE.png" />
+    <Content Include="ViewV5\images\icon\bigicon\PXGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\QYHD.png" />
+    <Content Include="ViewV5\images\icon\bigicon\QYIM.png" />
+    <Content Include="ViewV5\images\icon\bigicon\QYTX.png" />
+    <Content Include="ViewV5\images\icon\bigicon\QYWD.png" />
+    <Content Include="ViewV5\images\icon\bigicon\RCTX.png" />
+    <Content Include="ViewV5\images\icon\bigicon\RLZY.png" />
+    <Content Include="ViewV5\images\icon\bigicon\RWGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\TSSQ.png" />
+    <Content Include="ViewV5\images\icon\bigicon\TXSX.png" />
+    <Content Include="ViewV5\images\icon\bigicon\WQQD.png" />
+    <Content Include="ViewV5\images\icon\bigicon\WTFK.png" />
+    <Content Include="ViewV5\images\icon\bigicon\XMGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\XTGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\XXFB.png" />
+    <Content Include="ViewV5\images\icon\bigicon\YCGL.png" />
+    <Content Include="ViewV5\images\icon\bigicon\ZHBG.png" />
     <Content Include="ViewV5\images\qrcode.png" />
     <Content Include="ViewV5\JS\ADDJS.js" />
     <Content Include="ViewV5\JS\index.min.js">
@@ -265,10 +298,16 @@
     <Content Include="ViewV5\web\login\uniform.default.css" />
     <Content Include="View_Mobile\CSS\login.css" />
     <Content Include="View_Mobile\CSS\msui.css" />
+    <Content Include="View_Mobile\Images\book.png" />
+    <Content Include="View_Mobile\Images\book2.png" />
     <Content Include="View_Mobile\Images\phone-plus3.png" />
     <Content Include="View_Mobile\JS\avalon1.47.js" />
+    <Content Include="View_Mobile\UI\TEMP\MODEL\MJYGL.html" />
     <Content Include="View_Mobile\UI\UI_CAR_INFO.html" />
     <Content Include="View_Mobile\UI\UI_CAR_LIST.html" />
+    <Content Include="View_Mobile\UI\UI_JYGL_LIST.html" />
+    <Content Include="View_Mobile\UI\UI_TS_LIST.html" />
+    <Content Include="View_Mobile\UI\UI_TSLIST.html" />
     <Content Include="View_Mobile\UI\UI_HYGL_LIST.html" />
     <Content Include="View_Mobile\UI\UI_HYS_INFO.html" />
     <Content Include="View_Mobile\UI\UI_HYS_LIST.html" />
