--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -375,6 +375,7 @@
     <None Include="Properties\PublishProfiles\QJSignle.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_APP.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_UserS.pubxml" />
+    <None Include="Properties\PublishProfiles\QJ_WHLY.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
