--- a/QJY.API/packages.config
+++ b/QJY.API/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Senparc.Weixin" version="4.8.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Senparc.Weixin" version="4.20.2" targetFramework="net45" />
   <package id="Senparc.Weixin.QY" version="4.1.12" targetFramework="net45" />
+  <package id="Senparc.Weixin.Work" version="1.3.1" targetFramework="net45" />
 </packages>
