--- a/QJY.Data/App.Config
+++ b/QJY.Data/App.Config
@@ -2,8 +2,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=47.92.121.230;Initial Catalog=QJ_SignleYS;User ID=sa;Password=qijieyun@2017;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
