--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -1789,6 +1789,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\QJY.Common\QJY.Common.csproj">
+      <Project>{ebf94d84-906a-4e6a-9f3d-8a8b2e2cbc89}</Project>
+      <Name>QJY.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QJY.Data\QJY.Data.csproj">
       <Project>{041aff14-efea-47d8-b28a-b3bbf4bbcee9}</Project>
       <Name>QJY.Data</Name>
