修复新闻公告图片消息的Bug

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -502,6 +502,7 @@
     <Content Include="WZWeb\mob\success.html" />
     <None Include="Properties\PublishProfiles\QJSignle.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_APP.pubxml" />
+    <None Include="Properties\PublishProfiles\QJ_LingZong.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_QSFY.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_UserS.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_WHLY.pubxml" />
