修复基础表单编辑得Bug 新增员工生日提醒

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -430,10 +430,20 @@
     <Content Include="ViewV5\web\login\uniform.default.css" />
     <Content Include="View_Mobile\CSS\login.css" />
     <Content Include="View_Mobile\CSS\msui.css" />
+    <Content Include="View_Mobile\UI\RLZY\css\sr.css" />
     <Content Include="View_Mobile\Images\book.png" />
     <Content Include="View_Mobile\Images\book2.png" />
     <Content Include="View_Mobile\Images\phone-plus3.png" />
     <Content Include="View_Mobile\JS\avalon1.47.js" />
+    <Content Include="View_Mobile\UI\RLZY\happybirthday.mp3" />
+    <Content Include="View_Mobile\UI\RLZY\images\sr.jpg" />
+    <Content Include="View_Mobile\UI\RLZY\images\bg.jpg" />
+    <Content Include="View_Mobile\UI\RLZY\images\cake1.jpg" />
+    <Content Include="View_Mobile\UI\RLZY\images\cake2.jpg" />
+    <Content Include="View_Mobile\UI\RLZY\images\cake3.jpg" />
+    <Content Include="View_Mobile\UI\RLZY\images\frame.png" />
+    <Content Include="View_Mobile\UI\RLZY\images\icons-s0f8d09aef0.png" />
+    <Content Include="View_Mobile\UI\RLZY\sr.html" />
     <Content Include="View_Mobile\UI\TEMP\MODEL\MXXFB.html" />
     <Content Include="View_Mobile\UI\UI_GZT_TJ.html" />
     <Content Include="View_Mobile\UI\TEMP\MODEL\MJYGL.html" />
